Se agregaron cambios al HTML y CSS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Bootstrap4 Landing Page</title>
+    <title>DOCMAR</title>
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- FONT AWESOME -->
@@ -15,7 +15,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <img src="img/logo.png" style="width: 20%;">
+          <img src="img/logo.jpg" style="width: 20%"> 
+          <P class="text">Bienvenidos a DOCMAR</P>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Acerca de</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
+              <a class="nav-link" href="#">Equipo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Contacto</a>
             </li>
           </ul>
         </div>
@@ -43,15 +44,15 @@
           <div class="row d-flex h-100">
             <div class="col-sm-6 text-center justify-content-center align-self-center">
               <h1>
-                this is the title or a phrase relate to the product
+                El principito
               </h1>
-              <p>Elit reiciendis aspernatur obcaecati accusantium corporis? Mollitia eius ratione excepturi.</p>
+              <p>Encontraras muchos libros y muchos mas documentos.</p>
               <a href="#" class="btn btn-outline-secondary btn-lg text-white">
-                Read More
+                Leer mas
               </a>
             </div>
             <div class="col-sm-6">
-              <img src="img/product.jpg" class="img-fluid d-none d-sm-block">
+              <img src="img/product.jpg" class="img-fluid d-none d-sm-block" style="width: 80%">
             </div>
           </div>
         </div>
@@ -63,14 +64,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <input type="text" class="form-control form-control-lg" placeholder="Enter your Name">
+            <input type="text" class="form-control form-control-lg" placeholder="Introduzca su nombre">
           </div>
           <div class="col-md-4">
-            <input type="email" class="form-control form-control-lg" placeholder="Enter your Email">
+            <input type="email" class="form-control form-control-lg" placeholder="Introduzca su Email">
           </div>
           <div class="col-md-4">
             <button class="btn btn-primary btn-lg btn-block">
-              Suscribe
+              Suscribir
             </button>
           </div>
         </div>
@@ -85,9 +86,9 @@
           <div class="col-md-3">
             <div class="card text-center border-primary">
               <div class="card-body">
-                <h3>Feature One</h3>
+                <h3>Caracteristica 1</h3>
                 <p>
-                  Amet alias a ipsa tempora ullam asperiores aperiam rem? 
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, voluptatum? 
                 </p>
               </div>
             </div>
@@ -95,9 +96,9 @@
           <div class="col-md-3">
             <div class="card text-white bg-primary">
               <div class="card-body">
-                <h3>Feature Two</h3>
+                <h3>Caracteristica 2</h3>
                 <p>
-                  Amet alias a ipsa tempora ullam asperiores aperiam rem? 
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, eaque. 
                 </p>
               </div>
             </div>
@@ -105,19 +106,19 @@
           <div class="col-md-3">
             <div class="card text-center border-primary">
               <div class="card-body">
-                <h3>Feature Three</h3>
+                <h3>Caracteristica 3</h3>
                 <p>
-                  Amet alias a ipsa tempora ullam asperiores 
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, incidunt? 
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card text-white bg-primary">
+            <div class="card text-center border-primary">
               <div class="card-body">
-                <h3>Feature Four</h3>
+                <h3>Caracteristica 4</h3>
                 <p>
-                  Amet alias a ipsa tempora ullam asperiores aperiam rem? 
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, laborum. 
                 </p>
               </div>
             </div>
@@ -131,9 +132,9 @@
       <div class="container">
         <div class="row">
           <div class="m-5">
-            <h3>Why this Product?</h3>
+            <h3 class="text-center">¿Por qué este producto?</h3>
             <p>
-              Consectetur dolor at delectus dolores fugiat! Rerum inventore cumque quidem corporis iusto temporibus nesciunt minima! Harum harum qui dolores natus dolore repudiandae quae animi aliquid nobis sed? Quod culpa quia?
+              El principito es una novela corta y la obra más famosa del escritor y aviador francés Antoine de Saint-Exupéry.​
             </p>
           </div>
         </div>
@@ -148,42 +149,14 @@
             <div class="card-header" id="headingOne">
               <h5 class="mb-0">
                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  ¿Question One?
+                  ¿Preguntas frecuentes?
                 </button>
               </h5>
             </div>
 
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="headingTwo">
-              <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Collapsible Group Item #2
-                </button>
-              </h5>
-            </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-              <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="headingThree">
-              <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Collapsible Group Item #3
-                </button>
-              </h5>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-              <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                -Gestiona tus documentos, Seguro, Confiable, Menor tiempo.
               </div>
             </div>
           </div>
@@ -194,9 +167,9 @@
     <!-- TEAM -->
     <section class="text-center team">
       <div class="container p-5">
-        <h1 class="text-center text-white">Team</h1>
+        <h1 class="text-center text-white">Equipo</h1>
         <p class="text-white">
-          Adipisicing unde eum odio aliquam dolor ad voluptas expedita consequuntur aperiam inventore eaque. Dolorum facilis aut eum a delectus. Fugit velit quas harum quisquam amet provident inventore. Repudiandae repudiandae delectus.
+          Creadores del aplicativo web DOCMAR - Gestion Documental.
         </p>
         <div class="row">
           <!-- USER TEAM -->
@@ -204,9 +177,9 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>John Carter</h3>
+                <h3>José Martinez</h3>
                 <p>
-                  Dolor modi repudiandae quia beatae consectetur? Nam ullafugit ullam, accusamus! Totam mollitia eveniet!
+                  Estudiante de Mision TIC 2022.
                 </p>
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
@@ -227,9 +200,9 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>John Carter</h3>
+                <h3>Nicolas Montoya</h3>
                 <p>
-                  Dolor modi repudiandae quia beatae consectetur? Nam ullafugit ullam, accusamus! Totam mollitia eveniet!
+                  Estudiante de Mision TIC 2022.
                 </p>
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
@@ -250,9 +223,9 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>John Carter</h3>
+                <h3>Natalia Rodriguez</h3>
                 <p>
-                  Dolor modi repudiandae quia beatae consectetur? Nam ullafugit ullam, accusamus! Totam mollitia eveniet!
+                  Estudiante de Mision TIC 2022.
                 </p>
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
@@ -273,9 +246,9 @@
             <div class="card">
               <div class="card-body">
                 <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>John Carter</h3>
+                <h3>Mateo Mora</h3>
                 <p>
-                  Dolor modi repudiandae quia beatae consectetur? Nam ullafugit ullam, accusamus! Totam mollitia eveniet!
+                  Estudiante de Mision TIC 2022.
                 </p>
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
@@ -292,6 +265,28 @@
             </div>
           </div>
 
+          <div class="col-lg-3">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/person.png" class="img-fluid rounded-circle w-50">
+                <h3>Angel Nieto</h3>
+                <p>
+                  Estudiante de Mision TIC 2022.
+                </p>
+                <div class="d-flex flex-row justify-content-center">
+                  <div class="p-4">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </div>
+                  <div class="p-4">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                  </div>
+                  <div class="p-4">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -301,16 +296,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9">
-            <h3>Contact</h3>
+            <h3>Contacto</h3>
             <p>
-              Consectetur neque numquam autem animi?
+              Contactanos...
             </p>
             <form action="">
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <i class="fas fa-user input-group-text"></i>
                 </div>
-                <input type="text" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
               </div>
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
@@ -322,13 +317,13 @@
                 <div class="input-group-prepend">
                   <i class="fas fa-pencil-alt input-group-text"></i>
                 </div>
-                <textarea name="" cols="30" rows="10" placeholder="Message" class="form-control"></textarea>
+                <textarea name="" cols="30" rows="10" placeholder="Mensage" class="form-control"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary btn-block">Send</button>
+              <button type="submit" class="btn btn-primary btn-block">Enviar</button>
             </form>
           </div>
           <div class="col-lg-3 align-self-center">
-            <img src="img/logo.png" alt="">
+            <img src="img/logo.jpg" style="width: 140%">
           </div>
         </div>
       </div>
@@ -338,7 +333,7 @@
       <div class="container p-3">
         <div class="row text-center text-white">
           <div class="col ml-auto">
-            <p>Copyright &copy; 2018</p>
+            <p>Copyright & copy; 2022</p>
           </div>
         </div>
       </div>       
