--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,347 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>DOCMAR</title>
-    <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Docmar</title>
   </head>
   <body>
-    <!-- NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="/">
-          <img src="img/logo.jpg" style="width: 20%"> 
-          <P class="text">Bienvenidos a DOCMAR</P>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Equipo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- HEADER -->
-    <header class="main-header">
-      <div class="background-overlay text-white py-5">
-        <div class="container">
-          <div class="row d-flex h-100">
-            <div class="col-sm-6 text-center justify-content-center align-self-center">
-              <h1>
-                El principito
-              </h1>
-              <p>Encontraras muchos libros y muchos mas documentos.</p>
-              <a href="#" class="btn btn-outline-secondary btn-lg text-white">
-                Leer mas
-              </a>
-            </div>
-            <div class="col-sm-6">
-              <img src="img/product.jpg" class="img-fluid d-none d-sm-block" style="width: 80%">
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- NEWSLETTER  -->
-    <section id="newsletter" class="bg-dark text-white py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <input type="text" class="form-control form-control-lg" placeholder="Introduzca su nombre">
-          </div>
-          <div class="col-md-4">
-            <input type="email" class="form-control form-control-lg" placeholder="Introduzca su Email">
-          </div>
-          <div class="col-md-4">
-            <button class="btn btn-primary btn-lg btn-block">
-              Suscribir
-            </button>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- FEATURES -->
-
-    <section class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="card text-center border-primary">
-              <div class="card-body">
-                <h3>Caracteristica 1</h3>
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, voluptatum? 
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card text-white bg-primary">
-              <div class="card-body">
-                <h3>Caracteristica 2</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, eaque. 
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card text-center border-primary">
-              <div class="card-body">
-                <h3>Caracteristica 3</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, incidunt? 
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card text-center border-primary">
-              <div class="card-body">
-                <h3>Caracteristica 4</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, laborum. 
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ABOUT -->
-    <section class="m5 text-center bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="m-5">
-            <h3 class="text-center">¿Por qué este producto?</h3>
-            <p>
-              El principito es una novela corta y la obra más famosa del escritor y aviador francés Antoine de Saint-Exupéry.​
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ACCORDION -->
-    <section class="container text-center p-5">
-      <div class="row">
-        <div class="accordion" id="accordionExample">
-          <div class="card">
-            <div class="card-header" id="headingOne">
-              <h5 class="mb-0">
-                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  ¿Preguntas frecuentes?
-                </button>
-              </h5>
-            </div>
-
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-              <div class="card-body">
-                -Gestiona tus documentos, Seguro, Confiable, Menor tiempo.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- TEAM -->
-    <section class="text-center team">
-      <div class="container p-5">
-        <h1 class="text-center text-white">Equipo</h1>
-        <p class="text-white">
-          Creadores del aplicativo web DOCMAR - Gestion Documental.
-        </p>
-        <div class="row">
-          <!-- USER TEAM -->
-          <div class="col-lg-3">
-            <div class="card">
-              <div class="card-body">
-                <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>José Martinez</h3>
-                <p>
-                  Estudiante de Mision TIC 2022.
-                </p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="card">
-              <div class="card-body">
-                <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>Nicolas Montoya</h3>
-                <p>
-                  Estudiante de Mision TIC 2022.
-                </p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="card">
-              <div class="card-body">
-                <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>Natalia Rodriguez</h3>
-                <p>
-                  Estudiante de Mision TIC 2022.
-                </p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="card">
-              <div class="card-body">
-                <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>Mateo Mora</h3>
-                <p>
-                  Estudiante de Mision TIC 2022.
-                </p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3">
-            <div class="card">
-              <div class="card-body">
-                <img src="img/person.png" class="img-fluid rounded-circle w-50">
-                <h3>Angel Nieto</h3>
-                <p>
-                  Estudiante de Mision TIC 2022.
-                </p>
-                <div class="d-flex flex-row justify-content-center">
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section class="bg-light py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9">
-            <h3>Contacto</h3>
-            <p>
-              Contactanos...
-            </p>
-            <form action="">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <i class="fas fa-user input-group-text"></i>
-                </div>
-                <input type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <i class="fas fa-envelope input-group-text"></i>
-                </div>
-                <input type="text" class="form-control" placeholder="Email" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <i class="fas fa-pencil-alt input-group-text"></i>
-                </div>
-                <textarea name="" cols="30" rows="10" placeholder="Mensage" class="form-control"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary btn-block">Enviar</button>
-            </form>
-          </div>
-          <div class="col-lg-3 align-self-center">
-            <img src="img/logo.jpg" style="width: 140%">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container p-3">
-        <div class="row text-center text-white">
-          <div class="col ml-auto">
-            <p>Copyright & copy; 2022</p>
-          </div>
-        </div>
-      </div>       
-    </footer>
-
-    <!-- BOOTSTRAP SCRIPTS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
